--- a/templates/modales/opcionesReceta.html
+++ b/templates/modales/opcionesReceta.html
@@ -1,115 +1,181 @@
-{% extends 'app.html'%}
 
-{% block content %}
+<!-- Modal Ver Receta -->
+<div class="modal fade" id="VerReceta{{ cita[0] }}" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-xl">
+        <div class="modal-content border-dark border-top-0 border-2">
 
-    <!-- Button trigger modal -->
-    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#CrearReceta">
-        Crear Receta
-    </button>
-    
-    <!-- Modal -->
-    <div class="modal fade" id="CrearReceta" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered modal-xl">
-            <div class="modal-content border-dark border-top-0 border-2">
+            <div class="" style="background-color: rgb(60, 141, 188); height:1vh;  border-radius:1vh 1vh 0vh 0vh"></div>
 
-                <form action="">
+            <div class="modal-header justify-content-center border-dark border-top-0 border-2">
+                <h1 style="font-family: inria sans;" class="modal-title fs-5" id="staticBackdropLabel">Ver Receta</h1>
+            </div>
 
-                    <div class="" style="background-color: rgb(60, 141, 188); height:1vh;  border-radius:1vh 1vh 0vh 0vh"></div>
-    
-                    <div class="modal-header justify-content-center border-dark border-top-0 border-2">
-                        <h1 style="font-family: inria sans;" class="modal-title fs-5" id="staticBackdropLabel">Crear Receta</h1>
+            <div class="modal-body border-dark border-top-0 border-2">
+
+                <div class="d-flex gap-5 my-3">
+
+                    <div class="form-floating mb-3  ">
+                        <input value="{{ cita[1] }}" class="form-control" id="floatingInput"  readonly >
+                        <label for="floatingInput">Fecha</label>
                     </div>
-                    <div class="modal-body border-dark border-top-0 border-2">
-    
-                        <div class="d-flex gap-5 my-5">
-    
-                            <div class="input-group">
-                                <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Número">
-                            </div>
-    
-                            <div class="input-group ">
-                                <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Fecha" onfocus="(this.type='date')" onblur="(this.type='text')" id="date">
-                            </div>
 
-                            <div class="input-group ">
-                                <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Saturación O/G">
-                            </div>
-                            
-                            <div class="input-group ">
-                                
-                                <select class="form-select form-select" aria-label="default select example">
-                                    <option selected> Consultorio</option>
-                                    <option value="1">1</option>
-                                    <option value="2">2</option>
-                                </select>
-                            </div>
-                            
-                        </div>
-                        
-
-                        <div class="d-flex gap-5 mb-5 justify-content-between">
-                            
-                            <div class="w-50">
-                                <div class="input-group">
-                                    <input type="text" class="form-control col-5" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Nombre del Paciente">
-                                </div>
-                                
-                                <div class="d-flex mt-5 justify-content-between gap-3">    
-                                    <div class="input-group ">
-                                        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Altura (m)">
-                                    </div>
-        
-                                    <div class="input-group ">
-                                        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Peso (Kg)">
-                                    </div>
-
-                                    <div class="input-group ">
-                                        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="LPM">
-                                    </div>
-                                </div>
-                            </div>
-                            
-                            <div class="form-floating w-50">
-                                <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 125px"></textarea>
-                                <label for="floatingTextarea2">Síntomas</label>
-                            </div>
-                            
-                        </div>
-
-                        <div class="d-flex gap-5 mb-5 justify-content-between">
-                            
-                            <div class="form-floating w-50">
-                                <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 125px"></textarea>
-                                <label for="floatingTextarea2">Diagnóstico</label>
-                            </div>
-
-                            <div class="form-floating w-50">
-                                <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 125px"></textarea>
-                                <label for="floatingTextarea2">Indicaciones</label>
-                            </div>
-                            
-                        </div>
-
-                        <div class="d-flex mb-5 justify-content-between">
-                            <div class="form-floating w-50 me-5">
-                                <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 125px"></textarea>
-                                <label for="floatingTextarea2">Estudios Necesarios</label>
-                            </div>
-                            
-                            <div class="w-50 position-relative">
-                                <div class="flex-column text-end position-absolute bottom-0 end-0 w-100">
-                                    <button class="btn text-white col-3" style="background-color: rgb(102, 174, 84);">Finalizar</button>
-                                    <button type="button" class="btn btn-danger text-white col-3 ms-5" data-bs-dismiss="modal">Cancelar</button>
-                                </div>
-                            </div>
-                        </div>
-
-                        
+                    <div class="form-floating mb-3  ">
+                        <input value="{{ cita[2] }}" class="form-control" id="floatingInput"  readonly >
+                        <label for="floatingInput" >Hora</label>
                     </div>
-                </form>
+
+                    <div class="form-floating mb-3  ">
+                        <input value="{{ cita[7] }}" class="form-control" id="floatingInput"  readonly >
+                        <label for="floatingInput">Saturación</label>
+                    </div>
+                    
+                    <div class="form-floating mb-3  ">
+                        <input value="{{ cita[8] }}" class="form-control" id="floatingInput"  readonly >
+                        <label for="floatingInput">Glucosa</label>
+                    </div>
+
+
+                    <div class="form-floating mb-3  ">
+                        <input value="{{ cita[15] }}" class="form-control" id="floatingInput"  readonly >
+                        <label for="floatingInput">Consultorio</label>
+                    </div>
+                    
+                </div>
                 
-            
+
+                <div class="d-flex gap-5 mb-3 justify-content-between">
+                    
+                    <div class="w-50">
+
+                        <div class="form-floating mb-3  ">
+                            <input value="{{ cita[14] }}" class="form-control" id="floatingInput"  readonly >
+                            <label for="floatingInput">Nombre del Paciente</label>
+                        </div>
+                        
+                        <div class="d-flex mt-5 justify-content-between gap-3">
+
+                            <div class="form-floating mb-3  ">
+                                <input value="{{ cita[4] }}" class="form-control" id="floatingInput"  readonly >
+                                <label for="floatingInput">Altura (m)</label>
+                            </div>
+
+                            <div class="form-floating mb-3  ">
+                                <input value="{{ cita[3] }}" class="form-control" id="floatingInput"  readonly >
+                                <label for="floatingInput">Peso(kg)</label>
+                            </div>
+
+                            <div class="form-floating mb-3  ">
+                                <input value="{{ cita[5] }}" class="form-control" id="floatingInput"  readonly >
+                                <label for="floatingInput">Temperatura</label>
+                            </div>
+
+                            <div class="form-floating mb-3  ">
+                                <input value="{{ cita[8] }}" class="form-control" id="floatingInput"  readonly >
+                                <label for="floatingInput">BPM</label>
+                            </div>
+
+                        </div>
+                        
+                    </div>
+                    
+                    <div class="form-floating w-50">
+                        <textarea  readonly name="txtSin" class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 125px"> {{ cita[10] }} </textarea>
+                        <label for="floatingTextarea2">Síntomas</label>
+                    </div>
+                    
+                </div>
+
+                <div class="d-flex gap-5 mb-5 justify-content-between">
+                    
+                    <div class="form-floating w-50">
+                        <textarea  readonly name="txtDiagnostico" class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 125px"> {{ cita[11] }} </textarea>
+                        <label for="floatingTextarea2">Diagnóstico</label>
+                    </div>
+
+                    <div class="form-floating w-50">
+                        <textarea  readonly name="txtInd" class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 125px"> {{ cita[12] }} </textarea>
+                        <label for="floatingTextarea2">Indicaciones</label>
+                    </div>
+                    
+                </div>
+
+                <div class="d-flex mb-3 justify-content-between">
+                    <div class="form-floating w-50 me-5">
+                        <textarea  readonly name="txtEstudios" class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 125px"> {{ cita[13] }} </textarea>
+                        <label for="floatingTextarea2">Estudios Necesarios</label>
+                    </div>
+                    
+                    <div class="w-50 position-relative">
+                        <div class="flex-column text-end position-absolute bottom-0 end-0 w-100">
+                            <button class="btn text-white col-3" style="background-color: rgb(255, 157, 0);" data-bs-toggle="modal" data-bs-target="#descargarReceta{{ cita[0] }}">Descargar</button>
+                            <button type="button" class="btn btn-danger text-white col-3 ms-5" data-bs-dismiss="modal">Cancelar</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        
+        </div>
+    </div>
+</div>
+
+<!-- Modal Editar Estado Cita -->
+<div class="modal fade" id="EditarEstado{{ cita[0] }}" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered ">
+        <div class="modal-content border-dark border-top-0 border-2">
+
+            <form action="/actualizarEstadoCita" method="POST">
+
+                <div class="" style="background-color: rgb(60, 141, 188); height:1vh;  border-radius:1vh 1vh 0vh 0vh"></div>
+
+                <div class="modal-header justify-content-center border-dark border-top-0 border-2">
+                    <h1 style="font-family: inria sans;" class="modal-title fs-5" id="staticBackdropLabel">Editar Estado Cita</h1>
+                </div>
+                <div class="modal-body border-dark border-top-0 border-2">
+                    
+                    <input type="number" hidden value="{{ cita[0] }}" name="txtIdCita">
+
+                    <div class="flex-column text-center my-4 gap-3">
+                        <select  name="txtEstado" class="form-select form-select" aria-label="default select example">
+                            <option >Seleccionar Estado</option>
+                            <option value="1" style="color: rgb(7, 97, 149);" {% if cita[17] == 1 %} selected {% endif %} >En espera</option>
+                            <option value="2" style="color: rgb(102, 174, 84);" {% if cita[17] == 2 %} selected {% endif %}>Finalizada</option>
+                            <option value="3" class="text-danger" {% if cita[17] == 3 %} selected {% endif %}>Cancelada</option>
+                        </select>
+                    </div>
+
+                    <div class="flex-column text-center mb-3">
+                        <button type="submit" class="btn text-white mx-3" style="background-color: rgb(7, 97, 149);">Actualizar</button>
+                        <button type="button" class="btn btn-danger text-white mx-3" data-bs-dismiss="modal">Cancelar</button>
+                    </div>
+                    
+                </div>
+            </form>
+        
+        </div>
+    </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="descargarReceta{{ cita[0]}}" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog modal-xl">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="staticBackdropLabel">Descargar Receta</h1>
+            </div>
+            <div class="modal-body">
+
+                <div class="container">
+                    <object 
+                        class="w-100"
+                        type="application/pdf"
+                        data="{{ url_for('static', filename='PDFs/' + cita[16]) }}"
+                        style="height:100vh"
+                    ></object>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#VerReceta{{ cita[0] }}">Regresar</button>
             </div>
         </div>
     </div>
-{% endblock %}
+</div>
