--- a/templates/modales/opcionesUsuarios.html
+++ b/templates/modales/opcionesUsuarios.html
@@ -17,28 +17,28 @@
                         <input type="text" name="txtIdMedico" hidden value="{{medico[0]}}">
 
                         <div class="input-group">
-                            <input name="txtRFC" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="RFC" value="{{medico[1]}}">
+                            <input required oninvalid="this.setCustomValidity('Por favor escribir un RFC')" oninput="this.setCustomValidity('')" name="txtRFC" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="RFC" value="{{medico[1]}}">
                         </div>
 
                         <div class="input-group ">
-                            <input name="txtCorreo" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Correo" value="{{medico[4]}}">
+                            <input required oninvalid="this.setCustomValidity('Por favor escribir un correo')" oninput="this.setCustomValidity('')" name="txtCorreo" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Correo" value="{{medico[4]}}">
                         </div>
                     </div>
                     
                     <div class="d-flex gap-5 mb-5">
 
                         <div class="input-group">
-                            <input name="txtNombreC" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Nombre Completo" value="{{medico[2]}}">
+                            <input required oninvalid="this.setCustomValidity('Por favor escribir un nombre')" oninput="this.setCustomValidity('')" name="txtNombreC" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Nombre Completo" value="{{medico[2]}}">
                         </div>
 
                         <div class="input-group ">
-                            <input name="txtPass" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Contraseña" value="{{medico[5]}}">
+                            <input required oninvalid="this.setCustomValidity('Por favor escribir una contraseña')" oninput="this.setCustomValidity('')" name="txtPass" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Contraseña" value="{{medico[5]}}">
                         </div>
                     </div>
 
                     <div class="mb-5 w-50">
                         <div class="input-group pe-4">  
-                            <input name="txtCedula" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Cédula" value="{{medico[3]}}">
+                            <input required oninvalid="this.setCustomValidity('Por favor escribir una cédula')" oninput="this.setCustomValidity('')" name="txtCedula" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Cédula" value="{{medico[3]}}">
                         </div>                        
                     </div>
 
