--- a/templates/vistas/expedientesAdmin.html
+++ b/templates/vistas/expedientesAdmin.html
@@ -136,12 +136,12 @@
 
                             <div class="w-50">
                                 <div class="input-group">
-                                    <input name="txtNombre" type="text" class="form-control col-5" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Nombre del Paciente">
+                                    <input  required oninvalid="this.setCustomValidity('Por favor escribir un nombre')" oninput="this.setCustomValidity('')" name="txtNombre" type="text" class="form-control col-5" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Nombre del Paciente">
                                 </div>
                                 
                                 <div class="d-flex mt-5 justify-content-between gap-3">    
                                     <div class="input-group ">
-                                        <input name="txtFechaN" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Fecha de Nacimiento" onfocus="(this.type='date')" onblur="(this.type='text')" id="date">
+                                        <input required oninvalid="this.setCustomValidity('Por favor seleccionar una fecha')" oninput="this.setCustomValidity('')" name="txtFechaN" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Fecha de Nacimiento" onfocus="(this.type='date')" onblur="(this.type='text')" id="date">
                                     </div>
                                 </div>
                             </div>
