--- a/templates/vistas/usuariosAdmin.html
+++ b/templates/vistas/usuariosAdmin.html
@@ -147,28 +147,28 @@
                         <div class="d-flex gap-5 mb-5">
     
                             <div class="input-group">
-                                <input name="txtRFC" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="RFC">
+                                <input required oninvalid="this.setCustomValidity('Por favor escribir un RFC')" oninput="this.setCustomValidity('')" name="txtRFC" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="RFC">
                             </div>
     
                             <div class="input-group ">
-                                <input name="txtCorreo" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Correo">
+                                <input required oninvalid="this.setCustomValidity('Por favor escribir un correo')" oninput="this.setCustomValidity('')" name="txtCorreo" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Correo">
                             </div>
                         </div>
                         
                         <div class="d-flex gap-5 mb-5">
     
                             <div class="input-group">
-                                <input name="txtNombreC" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Nombre Completo">
+                                <input required oninvalid="this.setCustomValidity('Por favor escribir un nombre')" oninput="this.setCustomValidity('')" name="txtNombreC" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Nombre Completo">
                             </div>
     
                             <div class="input-group ">
-                                <input name="txtPass" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Contraseña">
+                                <input required oninvalid="this.setCustomValidity('Por favor escribir una contraseña')" oninput="this.setCustomValidity('')" name="txtPass" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Contraseña">
                             </div>
                         </div>
     
                         <div class="mb-5 w-50">
                             <div class="input-group pe-4">  
-                                <input name="txtCedula" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Cédula" >
+                                <input required oninvalid="this.setCustomValidity('Por favor escribir una cédula')" oninput="this.setCustomValidity('')" name="txtCedula" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Cédula" >
                             </div>                        
                         </div>
 
