Programa Terminado(creo)

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -30,7 +30,9 @@
     
                             <input type="number" hidden value="{{ usuario[0] }}" name="txtIdUsuario">
     
-                            <li><button class="dropdown-item text-danger" href="#">Cerrar Sesión</button></li>
+                            <li>
+                                <button class="dropdown-item text-danger" type="submit" >Cerrar Sesión</button>
+                            </li>
                         </form>
                     </ul>
                 </div>
