--- a/templates/app.html
+++ b/templates/app.html
@@ -16,7 +16,7 @@
 
     {% endblock %}
 
-    <div class="container position-absolute translate-middle top-50 start-50 text-center">
+    <div class="container mt-5 flex justify-items-center text-center">
 
         {% block content %}
 
