--- a/templates/modales/opcionesUsuarios.html
+++ b/templates/modales/opcionesUsuarios.html
@@ -32,7 +32,7 @@
                         </div>
 
                         <div class="input-group ">
-                            <input required oninvalid="this.setCustomValidity('Por favor escribir una contraseña')" oninput="this.setCustomValidity('')" name="txtPass" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Contraseña" value="{{medico[5]}}">
+                            <input required oninvalid="this.setCustomValidity('Por favor escribir una contraseña')" oninput="this.setCustomValidity('')" name="txtPass" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Contraseña">
                         </div>
                     </div>
 
